
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

syntax = "proto3";
package tox_prediction.data_model;


/*-- MESSAGES ----------------------------------------------------------------*/

message SmilesInput {

  /*-- fields --*/
  string text = 1;
}
