
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

syntax = "proto3";
package caikit.runtime.ToxPredict;
import "scoreoutput.proto";
import "toxpredictiontaskrequest.proto";


/*-- SERVICES ----------------------------------------------------------------*/

service ToxPredictService {
  rpc ToxPredictionTaskPredict(caikit.runtime.ToxPredict.ToxPredictionTaskRequest) returns (tox_prediction.data_model.ScoreOutput);
}
